--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "readi-it",
   "version": "0.0.1",
   "main": "main.js",
+  "repository": "https://github.com/Goofy-Goof/demo-electron-app",
   "scripts": {
     "start": "electron .",
-    "watch": "nodemon --exec electron ."
+    "watch": "nodemon --exec electron .",
+    "build": "electron-builder build --mac dmg"
   },
   "devDependencies": {
     "electron": "9.4.4",
+    "electron-builder": "^23.0.3",
     "nodemon": "^2.0.0"
   },
   "dependencies": {
